Trying to fix the alignment problem

--- a/src/views/contactUs/contactUs.css
+++ b/src/views/contactUs/contactUs.css
@@ -13,6 +13,7 @@
   }
   
   input, textarea {
+    align-items: center;
     margin-bottom: 20px;
     padding: 10px;
     font-size: 16px;
@@ -45,4 +46,9 @@
 
 .small {
   height: 50px;
+}
+
+body {
+  text-align: center;
+  align-items: center;
 }
